[gd_scene load_steps=3 format=3 uid="uid://dloadout_screen"]

[ext_resource type="Script" path="res://scripts/ui/stash/loadout_screen.gd" id="1_loadout"]
[ext_resource type="Script" path="res://scripts/ui/stash/stash_grid.gd" id="2_stash_grid"]

[node name="LoadoutScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_loadout")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 0.95)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LoadoutPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/LoadoutPanel"]
layout_mode = 2
text = "LOADOUT"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="MarginContainer/HBoxContainer/LoadoutPanel"]
layout_mode = 2

[node name="SlotsContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/LoadoutPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="WeaponLabel" type="Label" parent="MarginContainer/HBoxContainer/LoadoutPanel/SlotsContainer"]
layout_mode = 2
text = "Weapons"
horizontal_alignment = 1

[node name="WeaponSlots" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LoadoutPanel/SlotsContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="PrimarySlot" type="Panel" parent="MarginContainer/HBoxContainer/LoadoutPanel/SlotsContainer/WeaponSlots"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2

[node name="SecondarySlot" type="Panel" parent="MarginContainer/HBoxContainer/LoadoutPanel/SlotsContainer/WeaponSlots"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2

[node name="MeleeSlot" type="Panel" parent="MarginContainer/HBoxContainer/LoadoutPanel/SlotsContainer/WeaponSlots"]
custom_minimum_size = Vector2(64, 128)
layout_mode = 2

[node name="GearLabel" type="Label" parent="MarginContainer/HBoxContainer/LoadoutPanel/SlotsContainer"]
layout_mode = 2
text = "Gear"
horizontal_alignment = 1

[node name="GearSlots" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LoadoutPanel/SlotsContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="ArmorSlot" type="Panel" parent="MarginContainer/HBoxContainer/LoadoutPanel/SlotsContainer/GearSlots"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="RigSlot" type="Panel" parent="MarginContainer/HBoxContainer/LoadoutPanel/SlotsContainer/GearSlots"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="BackpackSlot" type="Panel" parent="MarginContainer/HBoxContainer/LoadoutPanel/SlotsContainer/GearSlots"]
custom_minimum_size = Vector2(128, 192)
layout_mode = 2

[node name="Separator2" type="HSeparator" parent="MarginContainer/HBoxContainer/LoadoutPanel"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MarginContainer/HBoxContainer/LoadoutPanel"]
layout_mode = 2
text = "Equip at least one weapon"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LoadoutPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ClearButton" type="Button" parent="MarginContainer/HBoxContainer/LoadoutPanel/ButtonContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Clear"

[node name="ReadyButton" type="Button" parent="MarginContainer/HBoxContainer/LoadoutPanel/ButtonContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
disabled = true
text = "Ready for Raid"

[node name="Separator3" type="HSeparator" parent="MarginContainer/HBoxContainer/LoadoutPanel"]
layout_mode = 2

[node name="NavContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/LoadoutPanel"]
layout_mode = 2

[node name="StashButton" type="Button" parent="MarginContainer/HBoxContainer/LoadoutPanel/NavContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Stash"

[node name="CloseButton" type="Button" parent="MarginContainer/HBoxContainer/LoadoutPanel/NavContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Close [ESC]"

[node name="StashPanel" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="StashLabel" type="Label" parent="MarginContainer/HBoxContainer/StashPanel"]
layout_mode = 2
text = "STASH (click to equip)"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/StashPanel"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="StashGrid" type="Control" parent="MarginContainer/HBoxContainer/StashPanel/ScrollContainer"]
custom_minimum_size = Vector2(640, 2560)
layout_mode = 2
script = ExtResource("2_stash_grid")

[connection signal="pressed" from="MarginContainer/HBoxContainer/LoadoutPanel/ButtonContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/LoadoutPanel/ButtonContainer/ReadyButton" to="." method="_on_ready_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/LoadoutPanel/NavContainer/StashButton" to="." method="_on_stash_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/LoadoutPanel/NavContainer/CloseButton" to="." method="_on_close_button_pressed"]
